--- a/tutorial/src/create_measure.Rmd
+++ b/tutorial/src/create_measure.Rmd
@@ -2,18 +2,18 @@
 
 Maybe you want to evaluate a prediction with a measure which is not yet implemented
 in **mlr**. This could be either a performance measure which is not included in the in **mlr**
-list of \man[measures] or a measure that uses a non-standard misclassification cost matrix.
+list of [&measures] or a measure that uses a non-standard misclassification cost matrix.
 
 
 ## Construct performance measure
 
-The \man[makeMeasure] function provides a simple way of constructing your own performance
+The [&makeMeasure] function provides a simple way of constructing your own performance
 measure. Below, this is exemplified by an implementation of the mean
 misclassification error (mmce) for the iris dataset. For this purpose we write a simple
 function that computes the measure on the basis of the predictions and subsequently wrap it
-in a \man[Measure] object. Then, we work with it as usual with the
+in a [&Measure] object. Then, we work with it as usual with the
 [performance](http://berndbischl.github.io/mlr/man/performance.html) function.
-See the R documentation of the \man[makeMeasure] function for details on the
+See the R documentation of the [&makeMeasure] function for details on the
 various parameters.
 
 ```r
@@ -44,10 +44,10 @@ performance(pred, measures = mmce)
 ## Construct measure for non-standard misclassification costs
 
 To create a measure that involves non-standard misclassification costs you can use
-the \man[makeCostMeasure] function. In order to do this, you first need to define the cost
+the [&makeCostMeasure] function. In order to do this, you first need to define the cost
 matrix you want to use and include all class labels. The cost matrix can then be
-wrapped in a \man[Measure] object and a prediction can be evaluated as usual with the
-\man[performance] function. See the R documentation of the \man[makeCostMeasure] function for
+wrapped in a [&Measure] object and a prediction can be evaluated as usual with the
+[&performance] function. See the R documentation of the [&makeCostMeasure] function for
 details on the various parameters.
 
 ```r
