--- a/tutorial/src/feature_selection.Rmd
+++ b/tutorial/src/feature_selection.Rmd
@@ -11,9 +11,9 @@ are. **mlr** supports [filters](#Filter) and [wrappers](#Wrapper).
 
 Filters are the simplest approach to find features that do not contain a lot of
 additional information given the other features and can be left out.
-Different methods are built into **mlr**'s function \man[getFeatureFilterValues]
+Different methods are built into **mlr**'s function [&getFeatureFilterValues]
 and all access filter algorithms from the package `FSelector`.
-The function is given a \man[Task] and simply returns a vector characterising
+The function is given a [&Task] and simply returns a vector characterising
 the importance of the different features.
 
 ```{r}
@@ -23,7 +23,7 @@ importance
 ```
 
 According to this filter, `Petal.Width` and `Petal.Length` contain the most information.
-With **mlr**'s function \man[filterFeatures], you can now filter the features in
+With **mlr**'s function [&filterFeatures], you can now filter the features in
 the task by leaving out all but a given number of features with the highest
 feature importance.
 
@@ -31,7 +31,7 @@ feature importance.
 filtered.task = filterFeatures(task, method="information.gain", select="abs", val=2)
 ```
 
-Other filter options in \man[filterFeatures] are to require a percentage of
+Other filter options in [&filterFeatures] are to require a percentage of
 features to be filtered instead or to set a threshold for the numerical importance
 values.
 
@@ -50,8 +50,8 @@ rsres$aggr
 You may want to know which features have been used. Luckily, we have called
 `resample` with the argument `models=TRUE`, which means that `rsres$models`
 contains a `list` of each model used for a fold.
-In this case the \man[Learner] is also of the class \man[FilterWrapper] and we can call
-\man[getFilteredFeatures] on each model.
+In this case the [&Learner] is also of the class [&FilterWrapper] and we can call
+[&getFilteredFeatures] on each model.
 
 ```{r}
 sfeats = sapply(rsres$models, getFilteredFeatures)
@@ -80,7 +80,7 @@ achieve on a given subset of the features in the data to do the filtering.
 
 Let's train a decision tree on the ``iris`` data and use a sequential forward
 search to find the best set of features w.r.t. the mean misclassification error
-(\man[mmce]).
+([&mmce]).
 
 ```{r}
 task = makeClassifTask(data=iris, target="Species")
@@ -98,7 +98,7 @@ analyzeFeatSelResult(sfSeq, reduce=FALSE)
 
 We fit a simple linear regression model to the ``BostonHousing`` data set and
 use a genetic algorithm to find a feature set that minimises the mean squared
-error (\man[mse]).
+error ([&mse]).
 
 ```{r}
 data(BostonHousing, package = "mlbench")
