--- a/tutorial/src/performance.Rmd
+++ b/tutorial/src/performance.Rmd
@@ -3,20 +3,20 @@
 The quality of the predictions of a model in **mlr** can be assessed w.r.t. a
 number of different performance measures.
 
-Typical performance measures are mean misclassification error (\man[mmce]),
-accuracy (\man[acc]) or measures based on ROC analysis for classification and mean
-of squared errors (\man[mse]) or mean of absolute errors (\man[mae]) for regression.
-For clustering tasks, measures such as the Dunn index (\man[dunn]) are provided,
-while for survival predictions, the Concordance Index (\man[cindex]) is
+Typical performance measures are mean misclassification error ([&mmce]),
+accuracy ([&acc]) or measures based on ROC analysis for classification and mean
+of squared errors ([&mse]) or mean of absolute errors ([&mae]) for regression.
+For clustering tasks, measures such as the Dunn index ([&dunn]) are provided,
+while for survival predictions, the Concordance Index ([&cindex]) is
 supported, and for cost-sensitive predictions the misclassification penalty
-(\man[mcp]) and others. It is also possible to access the time to train the
+([&mcp]) and others. It is also possible to access the time to train the
 model, the time to compute the prediction and their sum as performance measures.
 
-To see which performance measures are implemented, have a look at \man[measures].
+To see which performance measures are implemented, have a look at [&measures].
 If you want to implement an additional measure or include a measure with
 non-standard misclassification costs, go to section
 [create_measure](create_measure.md).
-In order to calculate the performance measures, the function \man[performance] is used.
+In order to calculate the performance measures, the function [&performance] is used.
 
 
 ## Classification example
