--- a/tutorial/src/predict.Rmd
+++ b/tutorial/src/predict.Rmd
@@ -3,7 +3,7 @@
 Predicting the target values for new observations is
 implemented the same way as most of the other predict methods in *R*.
 In general, all you need to do is
-call \man2[predict][predict.WrappedModel] on the object returned by \man[train]
+call [predict][&predict.WrappedModel] on the object returned by [&train]
 and pass the data to be predicted.
 
 
@@ -57,18 +57,18 @@ predictions.
 The first possibility is via the ``newdata`` argument and was already shown in the
 examples above.
 If the data for which predictions are required are already contained in
-the \man2[Learner][makeLearner], it is also possible to pass the task and optionally specify
+the [Learner][&makeLearner], it is also possible to pass the task and optionally specify
 the subset argument that contains the indices of the test observations.
 
-Predictions are encapsulated in a special \man[Prediction] object. The available
-accessors are documented in the man page for \man[Prediction].
+Predictions are encapsulated in a special [&Prediction] object. The available
+accessors are documented in the man page for [&Prediction].
 
 
 ### Classification example
 
 In case of a classification task, the result of
-\man2[predict][predict.WrappedModel] depends on the predict type, which was set
-when generating the \man2[Learner][makeLearner]. The default is to predict class
+[predict][&predict.WrappedModel] depends on the predict type, which was set
+when generating the [Learner][&makeLearner]. The default is to predict class
 labels.
 
 We start again by loading **mlr** and creating a classification task for the
@@ -124,7 +124,7 @@ As you can see, in addition to the predicted probabilities, a response
 is produced by choosing the class with the maximum probability and
 breaking ties at random.
 
-The predicted posterior probabilities can be accessed via the \man[getProbabilities] function.
+The predicted posterior probabilities can be accessed via the [&getProbabilities] function.
 
 ```{r}
 head(getProbabilities(pred))
@@ -155,7 +155,7 @@ head(pred$data)
 ```
 
 In a binary classification setting, we can adjust the threshold, used
-to map probabilities to class labels using \man[setThreshold]. Here, we set
+to map probabilities to class labels using [&setThreshold]. Here, we set
 the threshold for the *positive* class to 0.8:
 
 ```{r}
