--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -3,9 +3,9 @@
 *R* by default doesn't make use of multiple cores.
 With the integration of [parallelMap](https://github.com/berndbischl/parallelMap) into **mlr**, it becomes easy to activate the parallel computing capabilities already supported by **mlr**.
 
-All you have to do is select an interface by calling one of the `parallelStart*` functions.
+All you have to do is select an interface by calling one of the [parallelStart*](&parallelMap::parallelStart) functions.
 The first annotated loop **mlr** encounters will then be automatically parallelized.
-Afterwards it is good practice to call `parallelStop()`.
+Afterwards it is good practice to call [&parallelMap::parallelStop].
 
 ```{r}
 library("parallelMap")
