--- a/tutorial/src/configureMlr.Rmd
+++ b/tutorial/src/configureMlr.Rmd
@@ -1,11 +1,9 @@
 # Configure mlr
 
-If you really know what you are doing you may think **mlr** is limiting you in
-certain ways.
-Actually **mlr** is just designed to make errors due to typos or
-invalid parameter values as unlikely as possible. But sometimes you want to
-break those barriers and get full access. For all parameters, simply refer
-to the documentation of [&configureMlr].
+If you really know what you are doing you may think **mlr** is limiting you in certain ways.
+Actually **mlr** is just designed to make errors due to typos or invalid parameter values as unlikely as possible.
+But sometimes you want to break those barriers and get full access.
+For all parameters, simply refer to the documentation of [&configureMlr].
 
 You are bothered by all the output on the console like in this example?
 ```{r}
@@ -21,14 +19,13 @@ r = resample(lrn, task, rdesc)
 Just try the following:
 
 ```{r}
-configureMlr(show.learner.output=FALSE)
+configureMlr(show.learner.output = FALSE)
 r = resample(lrn, task, rdesc)
 ```
 
 In an additional scenario, you want to access a new parameter of a learner which
 is already available in **mlr**, but the parameter is not implemented in **mlr** yet.
-If this is the case you might want to [contact
-us](https://github.com/berndbischl/mlr#get-in-touch) or [open an issue](https://github.com/berndbischl/mlr/issues/new) as well!
+If this is the case you might want to [contact us](https://github.com/berndbischl/mlr#get-in-touch) or [open an issue](https://github.com/berndbischl/mlr/issues/new) as well!
 But until then you can turn off **mlr**'s paramater checking like this:
 
 ```{r}
