--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -5,7 +5,7 @@ With the integration of [parallelMap](https://github.com/berndbischl/parallelMap
 
 All you have to do is select an interface by calling one of the [parallelStart*](&parallelMap::parallelStart) functions.
 The first annotated loop **mlr** encounters will then be automatically parallelized.
-Afterwards it is good practice to call [&parallelMap::parallelStop].
+Afterwards it is good practice to call [parallelStop](&parallelMap::parallelStop).
 
 ```{r}
 library("parallelMap")
