--- a/tutorial/src/predict.Rmd
+++ b/tutorial/src/predict.Rmd
@@ -3,7 +3,7 @@
 Predicting the target values for new observations is
 implemented the same way as most of the other predict methods in *R*.
 In general, all you need to do is
-call [predict][&predict.WrappedModel] on the object returned by [&train]
+call [predict](&predict.WrappedModel) on the object returned by [&train]
 and pass the data to be predicted.
 
 
@@ -57,7 +57,7 @@ predictions.
 The first possibility is via the ``newdata`` argument and was already shown in the
 examples above.
 If the data for which predictions are required are already contained in
-the [Learner][&makeLearner], it is also possible to pass the task and optionally specify
+the [Learner](&makeLearner), it is also possible to pass the task and optionally specify
 the subset argument that contains the indices of the test observations.
 
 Predictions are encapsulated in a special [&Prediction] object. The available
@@ -67,8 +67,8 @@ accessors are documented in the man page for [&Prediction].
 ### Classification example
 
 In case of a classification task, the result of
-[predict][&predict.WrappedModel] depends on the predict type, which was set
-when generating the [Learner][&makeLearner]. The default is to predict class
+[predict](&predict.WrappedModel) depends on the predict type, which was set
+when generating the [Learner](&makeLearner). The default is to predict class
 labels.
 
 We start again by loading **mlr** and creating a classification task for the
