--- a/tutorial/src/train.Rmd
+++ b/tutorial/src/train.Rmd
@@ -49,7 +49,7 @@ mod
 As already mentioned, we can train a learner simply by
 calling the function [&train], passing it a [&Learner] and a [&Task].
 In the examples above, the machine learning method was specified
-through special [Learner][&makeLearner] objects. Creating a separate object
+through special [Learner](&makeLearner) objects. Creating a separate object
 allows to set the hyperparameters of the learner before training for example.
 
 Optionally, only a subset of the data, specified by an index set, can be used to
@@ -57,4 +57,4 @@ train the learner. This set is passed using the ``subset`` argument of [&train].
 
 The return value is always an object of class [&WrappedModel], which wraps the
 particular model of the used R classification or regression method. It
-can subsequently be used to perform a [prediction][&predict.WrappedModel] for new observations.
+can subsequently be used to perform a [prediction](&predict.WrappedModel) for new observations.
