--- a/NEWS
+++ b/NEWS
@@ -103,7 +103,7 @@ mlr_2.0:
 --  meancosts, mcp
 
 - new functions
--- removeConstantFeatures, normalizeFeatures, dropFeatures
+-- removeConstantFeatures, normalizeFeatures, dropFeatures, createDummyFeatures
 -- getTaskNFeats
 -- hasProperties, getProperties, setProperties, addProperties, removeProperties
 -- showHyperPars
@@ -124,8 +124,6 @@ mlr_2.0:
 -- makeModelMultiplexer, makeModelMultiplexerParamSet
 -- makeCostSensTask, makeCostSensClassifWrapper, makeCostSensRegrWrapper, makeCostsSensWeightedPairsLearner
 -- makeSurvTask
--- normalizeFeatures
--- createDummyFeatures
 -- impute, reimpute, makeImputeWrapper, lots of impute<Method>, makeImputeMethod 
 
 mlr_1.1:
