--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ mlr_2.2
 -- classif.lqa
 -- classif.randomForestSRC
 -- classif.sda
+-- regr.ctree
 -- regr.plsr
 -- regr.randomForestSRC
 -- cluster.cmeans
